--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,39 +15,60 @@ defaults:
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    name: ${{ matrix.name }}
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
       matrix:
         include:
+
           # Oldest supported versions
-          - enable_cuda: true
+          - name: Linux (CUDA 10.2, Python 3.8, PyTorch 1.11)
+            enable_cuda: true
             cuda: "10.2.89"
-            gcc: "8.5.0"
+            gcc: "8.5.*"
             nvcc: "10.2"
-            python: "3.7"
-            pytorch: "1.11.0"
-          # Latest supported versions
-          - enable_cuda: true
+            python: "3.8.*"
+            torchani: "2.2.*"
+            pytorch: "1.11.*"
+
+          # Older supported versions
+          - name: Linux (CUDA 11.2, Python 3.9, PyTorch 1.12)
+            enable_cuda: true
             cuda: "11.2.2"
-            gcc: "10.3.0"
+            gcc: "10.3.*"
             nvcc: "11.2"
-            python: "3.10"
-            pytorch: "1.11.0"
-          # Without CUDA
-          - enable_cuda: false
-            gcc: "10.3.0"
-            python: "3.10"
-            pytorch: "1.11.0"
+            python: "3.9.*"
+            torchani: "2.2.*"
+            pytorch: "1.12.*"
+
+          # Latest supported versions (with CUDA)
+          - name: Linux (CUDA 11.8, Python 3.10, PyTorch 2.0)
+            enable_cuda: true
+            cuda: "11.8.0"
+            gcc: "10.3.*"
+            nvcc: "11.8"
+            python: "3.10.*"
+            torchani: "2.2.*"
+            pytorch: "2.0.*"
+
+          # Latest supported versions (without CUDA)
+          - name: Linux (no CUDA, Python 3.10, PyTorch 2.0)
+            enable_cuda: false
+            gcc: "10.3.*"
+            python: "3.10.*"
+            pytorch: "2.0.*"
+            torchani: "2.2.*"
 
     steps:
     - name: Check out
       uses: actions/checkout@v2
 
     - name: Install CUDA Toolkit
-      uses: Jimver/cuda-toolkit@v0.2.4
+      uses: Jimver/cuda-toolkit@v0.2.10
       with:
         cuda: ${{ matrix.cuda }}
+        linux-local-args: '["--toolkit", "--override"]' 
       if: ${{ matrix.enable_cuda }}
 
     - name: Install Miniconda
@@ -62,8 +83,9 @@ jobs:
       run: |
         sed -i -e "/cudatoolkit/c\  - cudatoolkit ${{ matrix.cuda }}" \
                -e "/gxx_linux-64/c\  - gxx_linux-64 ${{ matrix.gcc }}" \
+               -e "/torchani/c\  - torchani ${{ matrix.torchani }}" \
                -e "/nvcc_linux-64/c\  - nvcc_linux-64 ${{ matrix.nvcc }}" \
-               -e "/python/c\  - python ${{ matrix.python }}.*" \
+               -e "/python/c\  - python ${{ matrix.python }}" \
                -e "/pytorch-gpu/c\  - pytorch-gpu ${{ matrix.pytorch }}" \
                environment.yml
 
@@ -72,8 +94,9 @@ jobs:
       run: |
         sed -i -e "/cudatoolkit/c\  # - cudatoolkit" \
                -e "/gxx_linux-64/c\  - gxx_linux-64 ${{ matrix.gcc }}" \
+               -e "/torchani/c\  - torchani ${{ matrix.torchani }}" \
                -e "/nvcc_linux-64/c\  # - nvcc_linux-64" \
-               -e "/python/c\  - python ${{ matrix.python }}.*" \
+               -e "/python/c\  - python ${{ matrix.python }}" \
                -e "/pytorch-gpu/c\  - pytorch-cpu ${{ matrix.pytorch }}" \
                environment.yml
 
@@ -82,6 +105,9 @@ jobs:
 
     - name: Install dependencies
       run: mamba env create -n nnpops -f environment.yml
+      env:
+        # Needed to install pytorch-gpu on a machine without a GPU
+        CONDA_OVERRIDE_CUDA: ${{ matrix.nvcc }}
 
     - name: List conda environment
       run: |
@@ -94,7 +120,7 @@ jobs:
         mkdir build && cd build
         cmake .. \
               -DENABLE_CUDA=${{ matrix.enable_cuda }} \
-              -DTorch_DIR=$CONDA_PREFIX/lib/python${{ matrix.python }}/site-packages/torch/share/cmake/Torch \
+              -DTorch_DIR=$(python -c 'import torch.utils; print(torch.utils.cmake_prefix_path)')/Torch \
               -DCMAKE_INSTALL_PREFIX=$CONDA_PREFIX
         make install
 
