--- a/environment.yml
+++ b/environment.yml
@@ -2,13 +2,13 @@ channels:
   - conda-forge
 dependencies:
   - cmake >=3.20
-  - cudatoolkit 11.2.2
-  - gxx_linux-64 10.3.0
+  - cudatoolkit 11.8.*
+  - gxx_linux-64 10.3.*
   - make
   - mdtraj
-  - nvcc_linux-64 11.2
-  - torchani 2.2.2
+  - nvcc_linux-64 11.8
+  - torchani 2.2.*
   - pytest
   - python 3.10.*
-  - pytorch-gpu 1.11.0
+  - pytorch-gpu 2.0.*
   - sysroot_linux-64 2.17
