--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,6 +114,16 @@ jobs:
         conda activate nnpops
         conda list
 
+    - name: Pip build (without CUDA)
+      if: ${{ !matrix.enable_cuda }}
+      run: |
+        pip -vvv wheel --wheel-dir=$(pwd) . --extra-index-url https://download.pytorch.org/whl/cpu 
+        
+    - name: Pip build (with CUDA)
+      if: ${{ matrix.enable_cuda }}
+      run: |
+        pip -vvv wheel --wheel-dir=$(pwd) . 
+
     - name: Configure, compile, and install
       run: |
         conda activate nnpops
@@ -129,13 +139,4 @@ jobs:
         conda activate nnpops
         cd build
         ctest --verbose --exclude-regex TestCuda
-        
-    - name: Pip build (without CUDA)
-      if: ${{ !matrix.enable_cuda }}
-      run: |
-        pip -vvv wheel --wheel-dir=$(pwd) nnpops --extra-index-url https://download.pytorch.org/whl/cpu
-    - name: Pip build (with CUDA)
-      if: ${{ matrix.enable_cuda }}
-      run: |
-        ENABLE_CUDA=ON pip -vvv wheel --wheel-dir=$(pwd) nnpops
-        
+                
