--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-22.04] #, windows-2019, macos-11]
+        os: [ubuntu-latest] #, windows-2019, macos-11]
         python: ['37', '38', '39', '310', '311']
         torch: ['1.11', '1.12', '2.0.0']
         cuda: ['10', '11', '12']
